[package]
name = "any_library"
version = "0.1.0"
edition = "2021"
authors=["Luke <https://github.com/LUKE1860>"]
rust-version = "1.60"
description = "My first library for type checks"
documentation =""
readme = "README.md"
repository = "https://github.com/LUKE1860/any_library-rs"
license = "GPL-2.0-or-later"
keywords = ["any","type_checking"]
[dependencies]
